--- a/view/templates/page_home.html
+++ b/view/templates/page_home.html
@@ -16,7 +16,7 @@
 
         <p>For every MIME type in IANA's list, this W3ID makes a URI like this:</p>
 
-        <ul><li><code>https://w3id.org/mediatype/</code> + <code>{Media-Type-template}</code></li></ul>
+        <ul><li><code>https://w3id.org/mediatype/</code> + <code>{Media-Type}</code></li></ul>
 
         <p>So for <code>text/html</code> we have:</p>
 
