--- a/view/templates/alternates.html
+++ b/view/templates/alternates.html
@@ -3,8 +3,8 @@
     {% block content %}
         <h1>Alternates View</h1>
         <h2>Instance <a href="{{ uri }}">{{ uri }}</a></h2>
-        <p>Default view: <a href="{{ uri }}">{{ default_view_token }}</a></p>
-        <table>
+        <h4>Default view: <a href="{{ uri }}">{{ default_view_token }}</a></h4>
+        <table class="layout">
             <tr>
                 <th>Token</th>
                 <th>Name</th>
