better alt views styling

--- a/view/templates/alternates.html
+++ b/view/templates/alternates.html
@@ -22,7 +22,7 @@
                     <a href="{{ uri }}?_view={{ token }}&_format={{ f }}">{{ f }}</a><br />
                 {% endfor %}
                 </td>
-                <td>
+                <td style="text-align: center;">
                 {% for l in vals['languages'] %}
                     <a href="{{ uri }}?_view={{ token }}&_lang={{ l }}">{{ l }}</a><br />
                 {% endfor %}
