--- a/view/templates/mediatype-en.html
+++ b/view/templates/mediatype-en.html
@@ -1,15 +1,20 @@
 {% extends "layout.html" %}
 
     {% block content %}
-    <h1>{{ deets['label'] }}</h1>
-    <h3><code>{{ request.url.replace('%2B', '+').replace('%2F', '/').split('/mediatype/')[1].replace('https://w3id.org/mediatype/', '') }}</code></h3>
-    <ul><li><a href="{{ request.url }}&_view=alternates">Alternate Views</a></li></ul>
+    <h1>{{ mediatype }}</h1>
+    <h3><a href="{{ request.values.get('uri') }}">{{ request.values.get('uri') }}</a></h3>
+    <h4>Source:</h4>
+    <ul>
+        <li><a href="https://www.iana.org/assignments/media-types/{{ mediatype }}">https://www.iana.org/assignments/media-types/{{ mediatype }}</a></li>
+    </ul>
     {% if deets['contributors'] is not none %}
-    <h4>Contributors</h4>
+    <h4>Contributors:</h4>
     <ul>
     {% for contributor in deets['contributors'] %}
         <li><a href="{{ contributor }}">{{ contributor }}</a></li>
     {% endfor %}
     </ul>
     {% endif %}
+    <h3>Other profiles, formats and languages:</h3>
+    <ul><li><a href="{{ request.base_url }}?uri={{ request.values.get('uri') }}&_view=alternates">Alternate Views</a></li></ul>
     {% endblock %}
