--- a/view/templates/agent.html
+++ b/view/templates/agent.html
@@ -1,9 +1,13 @@
-{% extends "layout.html" %}
+{% extends "page.html" %}
 
     {% block content %}
-    <h1>{{ deets['name'] }}</h1>
-    <ul><li><a href="{{ request.url }}&_view=alternates">Alternate Views</a></li></ul>
-    {%  if deets.get('u') is not none %}
-    <p>Contact: <a href="{{ deets.get('u') }}">{{ deets.get('u').replace('mailto:', '') }}</a></p>
-    {% endif %}
+        <div class="altview">
+            <h4>Alternates View</h4>
+            <p>See this content according to other views and formats:</p>
+            <p><a href="{{ request.base_url }}?_view=alternates"><em>Alternates</em> View</a></p>
+        </div>
+        <h1>{{ deets['name'] }}</h1>
+        {%  if deets.get('u') is not none %}
+        <p>Contact: <a href="{{ deets.get('u') }}">{{ deets.get('u').replace('mailto:', '') }}</a></p>
+        {% endif %}
     {% endblock %}
