--- a/view/templates/register.html
+++ b/view/templates/register.html
@@ -1,50 +1,70 @@
-{% extends "layout.html" %}
+{% extends "page.html" %}
 
-        {% block content %}
-        <h1>{{ label }}</h1>
-        <h2>Register View</h2>
-        <h3>Classes of item in this Register:</h3>
-        <ul>
-        {% for class in contained_item_classes %}
-            <li><a href="{{ class }}">{{ class }}</a></li>
-        {%  endfor %}
-        </ul>
-        <table>
-            <tr>
-                <td style="vertical-align:top; width:500px;">
-                    <h3>Items in this Register:</h3>
-                    <ul>
-                    {%- for item in register_items -%}
-                        {%- if item is not string %}
+{% block content %}
+        <style>
+            #title {
+                min-height: 175px;
+            }
+            #leftcol {
+                float: left;
+                width: 60%;
+            }
+
+            #rightcol {
+                float: right;
+                width: 40%;
+            }
+
+            #twocols {
+                clear:both;
+            }
+        </style>
+
+        <div class="altview">
+            <h4>Alternates View</h4>
+            <p>See this content according to other views and formats:</p>
+            <p><a href="{{ request.base_url }}?_view=alternates"><em>Alternates</em> View</a></p>
+        </div>
+        <div id="title">
+            <h1>Register</h1>
+            <h2>Of <em><a href="{{ contained_item_classes[0] }}">{{ contained_item_classes[0].split('/')[-1].split('#')[-1] }}</a></em> class instances</h2>
+        </div>
+        <div id="leftcol">
+            <div id="items">
+                <h3>Items</h3>
+                <ul>
+                    {% for item in register_items %}
                         <li><a href="{{ item[0] }}">{{ item[1] }}</a></li>
-                        {%- else %}
-                        <li><a href="{{ item }}">{{ item.split('#')[-1].split('/')[-1] }}</a></li>
-                        {%- endif %}
-                    {%- endfor -%}
-                    </ul>
-                    {%  if pagination.links %}
-                    <h5>Paging</h5>
-                    {%  endif %}
-                    {{ pagination.links }}
-                </td>
-                <td style="vertical-align:top;">
-                    <h3>Automated Pagination</h3>
-                    <p>To paginate these registered items, something you may wish a link following tool like a web crawler to do, use the query string arguments 'page' for the page number and 'per_page' for the number of items per page. HTTP <code>Link</code> headers of <code>first</code>, <code>prev</code>, <code>next</code> &amp; <code>last</code> are given to indicate URIs to the first, a previous, a next and the last page.</p>
-                    <p>Example:</p>
-                    <pre>
-http://example.com/reg/?page=7&per_page=50
-                    </pre>
-                    <p>Assuming 500 items, this request would result in a response with the following Link header:</p>
-                    <pre>
-Link:   &lt;http://example.com/reg/?per_page=50&gt; rel="first",
-    &lt;http://example.com/reg/?per_page=50&page=6&gt; rel="prev",
-    &lt;http://example.com/reg/?per_page=50&page=8&gt; rel="next",
-    &lt;http://example.com/reg/?per_page=50&page=10&gt; rel="last"
-                    </pre>
-                    <p>If you want to page through the whole collection, you should start at <code>first</code> and follow the link headers until you reach <code>last</code> or until there is no <code>last</code> link given. You shouldn't try to calculate each <code>page</code> query string argument yourself.</p>
-                    <h3>Alternate views</h3>
-                    <p>Different views of this register of objects are listed at its <a href="{{ uri }}?_view=alternates">Alternate views</a> page.</p>
-                </td>
-            </tr>
-        </table>
-        {% endblock %}
+                    {% endfor %}
+                </ul>
+                {% if not register_items %}
+                    <p><em>Coming soon!</em></p>
+                {% endif %}
+            </div>
+            <div id="pagination">
+                {%  if pagination.links %}
+                <h5>Paging</h5>
+                {{ pagination.links }}
+                {%  endif %}
+            </div>
+        </div><!-- leftcol -->
+        <div id="rightcol">
+            <div class="autopaginationinfo">
+                <h4>Automated Pagination</h4>
+                <p>To page through these items, use query string arguments 'page' and 'per_page'. HTTP <code>Link</code> headers of <code>first</code>, <code>prev</code>, <code>next</code> &amp; <code>last</code> are given in web responses.</p>
+                <p>Example, assuming 500 items, page 7, of 50 per page, is given by:</p>
+                <pre>
+.../?page=7&per_page=50
+                </pre>
+                <p>Link header with a response assuming 500 items would be:</p>
+                <pre>
+Link:   &lt;.../?per_page=500&gt; rel="first",
+&lt;.../?per_page=500&page=6&gt; rel="prev",
+&lt;.../?per_page=500&page=8&gt; rel="next",
+&lt;.../?per_page=500&page=10&gt; rel="last"
+                </pre>
+                <p>If you want to page through the whole collection, start at <code>first</code> and follow link headers until you reach <code>last</code> or until no <code>last</code> is given. You shouldn't try to calculate each <code>page</code> query string argument yourself.</p>
+            </div>
+        </div><!-- rightcol -->
+        <div id="twocols"></div>
+{% endblock %}
