linking Agents back to their MTs

--- a/view/templates/agent.html
+++ b/view/templates/agent.html
@@ -8,6 +8,18 @@
         </div>
         <h1>{{ deets['name'] }}</h1>
         {%  if deets.get('u') is not none %}
-        <p>Contact: <a href="{{ deets.get('u') }}">{{ deets.get('u').replace('mailto:', '') }}</a></p>
+          {%  if '@' in deets.get('u') %}
+            <p>Email: <a href="{{ deets.get('u') }}">{{ deets.get('u').replace('mailto:', '') }}</a></p>
+          {% else %}
+            <p>Web: <a href="{{ deets.get('u') }}">{{ deets.get('u').replace('mailto:', '') }}</a></p>
+          {% endif %}
+        {% endif %}
+        {%  if deets.get('mt') is not none %}
+          <h2>Media Types</h2>
+          <ul>
+            {% for mt in deets.get('mt') %}
+              <li><a href="{{ mt[0] }}">{{ mt[1] }}</a></li>
+            {% endfor %}
+          </ul>
         {% endif %}
     {% endblock %}
