--- a/view/templates/page.html
+++ b/view/templates/page.html
@@ -10,7 +10,7 @@
     <header>
         <a href="{{ url_for('controller.home') }}">Home</a> |
         <a href="{{ url_for('controller.mediatypes') }}">Media Types</a> |
-        <a href="{{ url_for('controller.agents') }}">Persons</a>
+        <a href="{{ url_for('controller.agents') }}">Agents</a>
     </header>
     <div id="content">
         {% block content %}{% endblock %}
