--- a/view/templates/page.html
+++ b/view/templates/page.html
@@ -8,9 +8,11 @@
 </head>
 <body>
     <header>
-        <a href="{{ url_for('controller.home') }}">Home</a> |
         <a href="{{ url_for('controller.mediatypes') }}">Media Types</a> |
-        <a href="{{ url_for('controller.agents') }}">Agents</a>
+        <a href="{{ url_for('controller.agents') }}">Agents</a> ||
+        <a href="{{ url_for('controller.home') }}">Home</a> |
+        <a href="{{ url_for('controller.about') }}">About</a> |
+        <a href="{{ url_for('controller.connegp') }}">Content Negotation by Profile</a>
     </header>
     <div id="content">
         {% block content %}{% endblock %}
