/reg/ regirecting to {home}?_view=reg

--- a/view/templates/page.html
+++ b/view/templates/page.html
@@ -12,7 +12,7 @@
         <a href="{{ url_for('controller.agents') }}">Agents</a> ||
         <a href="{{ url_for('controller.home') }}">Home</a> |
         <a href="{{ url_for('controller.about') }}">About</a> |
-        <a href="{{ url_for('controller.connegp') }}">Content Negotation by Profile</a>
+        <a href="{{ url_for('controller.connegp') }}">Content Negotiation by Profile</a>
     </header>
     <div id="content">
         {% block content %}{% endblock %}
