--- a/view/templates/agent.html
+++ b/view/templates/agent.html
@@ -4,7 +4,7 @@
         <div class="altview">
             <h4>Alternates View</h4>
             <p>See this content according to other views and formats:</p>
-            <p><a href="{{ request.base_url }}?_view=alternates"><em>Alternates</em> View</a></p>
+            <p><a href="{{ request.url }}&_view=alternates"><em>Alternates</em> View</a></p>
         </div>
         <h1>{{ deets['name'] }}</h1>
         {%  if deets.get('u') is not none %}
