--- a/view/static/simple.css
+++ b/view/static/simple.css
@@ -93,5 +93,15 @@ table.layout td {
 
 .commandline {
     background-color: #eeeeee;
-    padding: 3px;
+    padding: 3px 7px 3px 7px;
+}
+
+ul, ol {
+    line-height: 1.2em;
+}
+
+.connegp {
+    font-style: italic;
+    background-color: rgba(240, 128, 128, .25);
+    padding: 3px 7px 3px 7px;
 }
